--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.0",
     "@repo/ui": "workspace:*",
     "next": "^15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22",
     "@types/react": "19.0.8",
