--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./globals.css": "./src/globals.css",
+    ".": "./src/index.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -13,15 +14,21 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/prettier-config": "workspace:*",
     "@turbo/gen": "^2.4.0",
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
+    "prettier": "^3.5.0",
     "typescript": "5.7.3"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }
+  },
+  "sideEffects": [
+    "**/*.css"
+  ]
 }
