--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,26 +9,44 @@
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "3.2.4",
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@storybook/addon-essentials": "8.5.8",
+    "@storybook/addon-interactions": "8.5.8",
+    "@storybook/addon-onboarding": "8.5.8",
+    "@storybook/blocks": "8.5.8",
+    "@storybook/nextjs": "8.5.8",
+    "@storybook/react": "8.5.8",
+    "@storybook/test": "8.5.8",
     "@turbo/gen": "^2.4.0",
-    "@types/node": "^22.13.0",
+    "@types/node": "^20.0.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
+    "eslint-plugin-storybook": "^0.11.3",
     "prettier": "^3.5.0",
+    "storybook": "8.5.8",
     "typescript": "5.7.3"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.0",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "sideEffects": [
     "**/*.css"
-  ]
+  ],
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
